# InteleBase

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT_PLAN.md  LICENSE  README.md  docker-compose.yml
.claude/: settings.local.json
.omc/: notepad.md  project-memory.json
.omc/sessions/: 0187fde8-3fe6-4c18-a6f1-e0b487c5076d.json
.omc/state/: last-tool-error.json
.omc/state/checkpoints/: checkpoint-2026-04-25T04-14-46-256Z.json  checkpoint-2026-04-25T06-20-47-241Z.json  checkpoint-2026-04-25T08-52-18-722Z.json
config/: default.toml
crates/kb-auth/: Cargo.toml
crates/kb-auth/src/: claims.rs  jwt.rs  lib.rs  middleware.rs  password.rs  rbac.rs
crates/kb-cache/: Cargo.toml
crates/kb-cache/src/: distributed.rs  lib.rs  memory.rs
crates/kb-core/: Cargo.toml
crates/kb-core/src/: config.rs  error.rs  lib.rs
crates/kb-core/src/models/: audit_log.rs  chunk.rs  document.rs  knowledge_base.rs  mod.rs  permission.rs  role.rs  user.rs
crates/kb-core/src/traits/: llm_client.rs  mod.rs  search_engine.rs  storage.rs  vector_store.rs
crates/kb-db/: Cargo.toml
crates/kb-db/src/: lib.rs  pagination.rs  pool.rs
crates/kb-db/src/repositories/: audit_log.rs  chunks.rs  documents.rs  knowledge_bases.rs  mod.rs  permissions.rs  roles.rs  users.rs
crates/kb-document/: Cargo.toml
crates/kb-document/src/: chunker.rs  lib.rs  parser.rs  pipeline.rs  types.rs
crates/kb-llm/: Cargo.toml
crates/kb-llm/src/: lib.rs  ollama.rs  openai.rs  types.rs
crates/kb-queue/: Cargo.toml
crates/kb-queue/src/: jobs.rs  lib.rs  queue.rs
crates/kb-retrieval/: Cargo.toml
crates/kb-retrieval/src/: hybrid_search.rs  lib.rs  prompt.rs  rag_pipeline.rs
crates/kb-search/: Cargo.toml
crates/kb-search/src/: highlight.rs  index.rs  lib.rs  reader.rs  schema.rs  writer.rs
crates/kb-server/: Cargo.toml
crates/kb-server/src/: error.rs  lib.rs  main.rs  middleware.rs  openapi.rs  router.rs  state.rs
crates/kb-server/src/routes/: auth.rs  health.rs  knowledge_bases.rs  mod.rs
crates/kb-storage/: Cargo.toml
crates/kb-storage/src/: lib.rs  minio.rs  object_store.rs
crates/kb-vector/: Cargo.toml
crates/kb-vector/src/: embedding.rs  lib.rs  qdrant_store.rs  types.rs
crates/kb-web/: Cargo.toml
crates/kb-web/src/: app.rs  lib.rs
crates/kb-web/src/api/: auth.rs  kb.rs  mod.rs
crates/kb-web/src/components/: dashboard.rs  kb_detail.rs  login.rs  mod.rs  modals.rs  nav.rs
crates/kb-web/src/state/: auth.rs  kb.rs  mod.rs
crates/kb-worker/: Cargo.toml
crates/kb-worker/src/: main.rs  processor.rs
frontend/: app.js  index.html
migrations/: 0001_create_users.sql  0002_create_roles.sql  0003_create_knowledge_bases.sql  0004_create_kb_permissions.sql  0005_create_documents.sql  0006_create_chunks.sql  0007_create_audit_log.sql
