[package]
name = "kb-cache"
version = "0.1.0"
edition.workspace = true

[dependencies]
kb-core = { workspace = true }
moka = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }