[package]
name = "kb-db"
version = "0.1.0"
edition.workspace = true

[dependencies]
kb-core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }