[package]
name = "kb-llm"
version = "0.1.0"
edition.workspace = true

[dependencies]
kb-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
tracing = { workspace = true }