[package]
name = "kb-retrieval"
version = "0.1.0"
edition.workspace = true

[dependencies]
kb-core = { workspace = true }
kb-search = { workspace = true }
kb-vector = { workspace = true }
kb-llm = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }