[package]
name = "kb-search"
version = "0.1.0"
edition.workspace = true

[dependencies]
kb-core = { workspace = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }