[package]
name = "kb-vector"
version = "0.1.0"
edition.workspace = true

[dependencies]
kb-core = { workspace = true }
qdrant-client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }