[package]
name = "kb-web"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kb-core = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }
reactive_stores = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "dep:leptos_axum", "tokio/full"]