[package]
name = "kb-worker"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "kb-worker"
path = "src/main.rs"

[dependencies]
kb-core = { workspace = true }
kb-db = { workspace = true }
kb-document = { workspace = true }
kb-search = { workspace = true }
kb-vector = { workspace = true }
kb-queue = { workspace = true }
kb-storage = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { workspace = true }